force-app/main/default/objects/wkdw__OnboardingTemplateTask__c/wkdw__OnboardingTemplateTask__c.object-meta.xml
<CustomObject>
    <description>Custom object that represents transition tasks that can be associated with a template.</description>
    <label>Transition Plan Template Task</label>
    <nameField>
        <displayFormat>TPTT-{0000}</displayFormat>
        <label>Template Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transition Plan Template Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>