force-app/main/default/objects/wkdw__OnboardingTemplateTask__c/fields/wkdw__Description__c.field-meta.xml
<CustomField>
    <fullName>wkdw__Description__c</fullName>
    <description>A brief description about the template.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>