force-app/main/default/objects/wkdw__OnboardingTemplateTask__c/fields/wkdw__EffectiveDateOffset__c.field-meta.xml
<CustomField>
    <fullName>wkdw__EffectiveDateOffset__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>This can be a positive or negative number that represents the difference in days relative to the Transition Plan Effective Date</inlineHelpText>
    <label>Effective Date Offset</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>