force-app/main/default/objects/wkdw__OnboardingTemplateTask__c/fields/wkdw__IndividualUser__c.field-meta.xml
<CustomField>
    <fullName>wkdw__IndividualUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If Task Owner Type = Individual User, this field is required</description>
    <label>Individual User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Transition_Plan_Template_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>