force-app/main/default/objects/wkdw__OnboardingTemplateTask__c/fields/wkdw__OnboardingTask__c.field-meta.xml
<CustomField>
    <fullName>wkdw__OnboardingTask__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Transition Task that is linked to the template</description>
    <label>Transition Plan Task</label>
    <referenceTo>wkdw__OnboardingTask__c</referenceTo>
    <relationshipLabel>Transition Plan Template Tasks</relationshipLabel>
    <relationshipName>Onboarding_Tasks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>