force-app/main/default/objects/wkdw__OnboardingTemplateTask__c/fields/wkdw__OnboardingTemplate__c.field-meta.xml
<CustomField>
    <fullName>wkdw__OnboardingTemplate__c</fullName>
    <description>Parent Template record Id.</description>
    <label>Transition Plan Template</label>
    <referenceTo>wkdw__OnboardingTemplate__c</referenceTo>
    <relationshipLabel>Transition Plan Template Tasks</relationshipLabel>
    <relationshipName>Template_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>