force-app/main/default/objects/wkdw__OnboardingTemplateTask__c/fields/wkdw__Queue__c.field-meta.xml
<CustomField>
    <fullName>wkdw__Queue__c</fullName>
    <description>If Task Owner Type = Queue, this field is required</description>
    <inlineHelpText>Please enter the Queue ID in this field</inlineHelpText>
    <label>Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>