force-app/main/default/objects/wkdw__OnboardingTemplateTask__c/fields/wkdw__TaskOwnerType__c.field-meta.xml
<CustomField>
    <fullName>wkdw__TaskOwnerType__c</fullName>
    <description>Keep PL options in this order</description>
    <label>Task Owner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee</fullName>
                <default>true</default>
                <label>Employee</label>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Individual User</fullName>
                <isActive>false</isActive>
                <label>Individual User - Reserved for future use</label>
            </value>
            <value>
                <fullName>Queue</fullName>
                <isActive>false</isActive>
                <label>Queue - Reserved for future use</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>