force-app/main/default/objects/wkdw__OnboardingTemplateTask__c/listViews/wkdw__All.listView-meta.xml
<ListView>
    <fullName>wkdw__All</fullName>
    <columns>NAME</columns>
    <columns>wkdw__OnboardingTask__c</columns>
    <columns>wkdw__OnboardingTemplate__c</columns>
    <columns>wkdw__TaskOwnerType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>